<resources>
    <string name="app_name">CourseWork</string>
    <string name="new_word">New word</string>
    <string name="add_new_word">Add new word</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="confirm_password">Confirm password</string>

    <string name="oAuthCode">oAuthCode</string>
</resources>
