<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPasswordEditText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="@+id/emailEditText" android:hint="@string/confirm_password"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="@+id/emailEditText" android:hint="@string/password"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createAccountButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"/>
    <TextView
            android:text="@string/already_have_an_account_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveAccountTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
</android.support.constraint.ConstraintLayout>